# FastApiProject

./: crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_10_05_1413-caf8b061b620_create_products_table.py  2024_10_20_1410-0ef58515f482_reate_users_table.py  2024_10_20_1425-f42aaeaa3066_create_posts_table.py  2024_10_20_1532-4eb1eaaa6c41_create_profile_table.py  2024_10_31_1205-040387b96ed2_create_profile_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependenies.py  schemas.py  views.py
core/: config.py
core/models/: base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
